# volunteero

./: netlify.toml  presentation.html
demo/: README.md  index.html  styles.css
demo/ssb/: index.html
heart/: CONTRIBUTING.md  Cargo.toml  Makefile
heart/src/: address.rs  contact.rs  csv_parser.rs  dto.rs  fakeData.csv  geocoder.rs  import123.csv  label.rs  lib.rs  location.rs  main.rs  opportunity.rs  organisation.rs  repository.rs  sample_data.rs
heart/static/: swagger.yaml
heart/tests/: csv_parser.rs  opportunities.rs  swagger.rs
heart/tests/common/: mod.rs
heart/tests/reference_files/: opportunities.json
heart/tests/sample_csvs/: broken.csv  sample.csv
widgets/hello-volunteero/: README.md  package.json  vue.config.js
widgets/hello-volunteero/public/: index.html
widgets/hello-volunteero/src/: Main.vue  Talentkarte.json  main.js
widgets/hello-volunteero/src/components/: Bot.vue  HelloWorld.vue  Main.vue  Modal.vue  Question.vue  QuestionsList.vue  Result.vue  ResultsList.vue  Style.vue
widgets/hello-volunteero/src/svg/: Arrow.vue  Cross.vue  Lama.vue
