[package]
name = "heart"
version = "0.1.0"
authors = ["Dominik Kellner <dkellner@dkellner.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
csv = "1.1"
serde = { version = "1.0.103", features = ["derive"] }
lazy_static = "1.4.0"
itertools = "0.8.2"
reqwest = "0.9.22"
regex = "1.3.1"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[dev-dependencies]
assert-json-diff = "1.0.1"
serde_json = "1.0.44"
